--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: elixir
 elixir:
-  - 1.5.0
-  - 1.5.1
-  - 1.5.2
+  - 1.6.0
+  - 1.6.1
+  - 1.6.2
 otp_release:
   - 19.2
   - 20.0
-script: "MIX_ENV=test mix local.hex --force && MIX_ENV=test mix do deps.get, test && mix dialyzer --halt-exit-status"
+script: "MIX_ENV=test mix local.hex --force && MIX_ENV=test mix do deps.get, test && mix format --check-formatted && mix dialyzer --halt-exit-status"
