inspect the _build directory before the build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,11 @@ otp_release:
   - 21.0
 env:
   - MIX_ENV=test
+before_install:
+  - sudo apt-get install -y tree
 before_script:
+  - ls -alh
+  - tree _build
   - mix local.hex --force && mix deps.get
 script:
   - mix test
