Another commit for Travis to start using the cache.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
   - sudo apt-get install -y tree
 before_script:
   - ls -alh
+  # checking if the cache gets brought back.
   - tree _build
   - mix local.hex --force && mix deps.get
 script:
