--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ env:
 before_script:
   - mix local.hex --force && mix deps.get
 script:
-  - mix test
+  - mix compile
+  - mix test --trace --include deprecations
   - mix format --check-formatted
   - mix dialyzer --halt-exit-status
 cache:
