--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ matrix:
       elixir: 1.7.4
     - otp_release: 21.3
       elixir: 1.8.1
+    - otp_release: 22.0
+      elixir: 1.8.2
 env:
   - MIX_ENV=test
 before_script:
